# litquid

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json
liquid/: README.md
liquid/clientTemplateValue/dotnet/: ClientTemplateValue.cs  LitQuid.Liquid.ClientTemplateValue.csproj
liquid/clientTemplateValue/java/: pom.xml
liquid/clientTemplateValue/java/src/main/java/com/litquid/liquid/filters/: ClientTemplateValue.java
liquid/clientTemplateValue/typescript/src/: index.ts
liquid/csr/dotnet/: Csr.cs  LitQuid.Liquid.Csr.csproj
liquid/csr/java/: pom.xml
liquid/csr/typescript/: package.json  tsconfig.json
liquid/csr/typescript/src/: index.ts
litquid/: README.md
litquid/runtime/: README.md  package.json  tsconfig.json
litquid/runtime/src/: index.ts  litquid-element.ts
litquid/samples/components/: tsconfig.json
litquid/samples/components/scripts/: my-component.ts  stat-card.ts
litquid/samples/components/templates/: my-component.liquid  stat-card.liquid
litquid/samples/dotnet/: Program.cs  Sample.csproj  package-lock.json  package.json
litquid/samples/dotnet/Endpoints/: HomeEndpoints.cs
litquid/samples/dotnet/Models/: UserViewModel.cs
litquid/samples/dotnet/Properties/: launchSettings.json
litquid/samples/dotnet/Services/: TemplateService.cs
litquid/samples/dotnet/Views/: index.html
litquid/samples/dotnet/scripts/: build-js.mjs  watch-js.mjs
litquid/samples/dotnet/wwwroot/css/: styles.css
litquid/toolchain/: Cargo.toml
litquid/toolchain/src/: lib.rs  main.rs  watch.rs
litquid/toolchain/src/codegen/: csharp.rs  mod.rs
(+1 files in other folders)
